# docs/swagger.json
@@ -917,7 +917,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_detail"
+                    "角色详情视图"
                 ],
                 "summary": "query objects",
                 "parameters": [
@@ -1039,7 +1039,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_detail"
+                    "角色详情视图"
                 ],
                 "summary": "save",
                 "parameters": [
@@ -1091,7 +1091,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_detail"
+                    "角色详情视图"
                 ],
                 "summary": "batch delete",
                 "parameters": [
@@ -1134,7 +1134,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_detail"
+                    "角色详情视图"
                 ],
                 "summary": "batch update",
                 "parameters": [
@@ -1175,7 +1175,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_detail"
+                    "角色详情视图"
                 ],
                 "summary": "GroupBy",
                 "parameters": [
@@ -1232,7 +1232,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_detail"
+                    "角色详情视图"
                 ],
                 "summary": "page query",
                 "parameters": [
@@ -1373,7 +1373,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_detail"
+                    "角色详情视图"
                 ],
                 "summary": "delete",
                 "parameters": [
@@ -1420,7 +1420,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_rel_detail"
+                    "角色资源关联详情视图"
                 ],
                 "summary": "query objects",
                 "parameters": [
@@ -1560,7 +1560,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_rel_detail"
+                    "角色资源关联详情视图"
                 ],
                 "summary": "save",
                 "parameters": [
@@ -1612,7 +1612,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_rel_detail"
+                    "角色资源关联详情视图"
                 ],
                 "summary": "batch delete",
                 "parameters": [
@@ -1655,7 +1655,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_rel_detail"
+                    "角色资源关联详情视图"
                 ],
                 "summary": "batch update",
                 "parameters": [
@@ -1696,7 +1696,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_rel_detail"
+                    "角色资源关联详情视图"
                 ],
                 "summary": "GroupBy",
                 "parameters": [
@@ -1753,7 +1753,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_rel_detail"
+                    "角色资源关联详情视图"
                 ],
                 "summary": "page query",
                 "parameters": [
@@ -1912,7 +1912,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_rel_detail"
+                    "角色资源关联详情视图"
                 ],
                 "summary": "delete",
                 "parameters": [
@@ -2452,7 +2452,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_with_resource_ids"
+                    "角色资源ID关联视图"
                 ],
                 "summary": "query objects",
                 "parameters": [
@@ -2574,7 +2574,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_with_resource_ids"
+                    "角色资源ID关联视图"
                 ],
                 "summary": "save",
                 "parameters": [
@@ -2626,7 +2626,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_with_resource_ids"
+                    "角色资源ID关联视图"
                 ],
                 "summary": "batch delete",
                 "parameters": [
@@ -2669,7 +2669,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_with_resource_ids"
+                    "角色资源ID关联视图"
                 ],
                 "summary": "batch update",
                 "parameters": [
@@ -2710,7 +2710,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_with_resource_ids"
+                    "角色资源ID关联视图"
                 ],
                 "summary": "GroupBy",
                 "parameters": [
@@ -2767,7 +2767,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_with_resource_ids"
+                    "角色资源ID关联视图"
                 ],
                 "summary": "page query",
                 "parameters": [
@@ -2908,7 +2908,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role_with_resource_ids"
+                    "角色资源ID关联视图"
                 ],
                 "summary": "delete",
                 "parameters": [
@@ -3877,7 +3877,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_menu"
+                    "用户菜单关联视图"
                 ],
                 "summary": "query objects",
                 "parameters": [
@@ -3927,6 +3927,12 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "zh_name",
+                        "name": "zh_name",
                         "in": "query"
                     },
                     {
@@ -4047,7 +4053,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_menu"
+                    "用户菜单关联视图"
                 ],
                 "summary": "save",
                 "parameters": [
@@ -4099,7 +4105,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_menu"
+                    "用户菜单关联视图"
                 ],
                 "summary": "batch delete",
                 "parameters": [
@@ -4142,7 +4148,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_menu"
+                    "用户菜单关联视图"
                 ],
                 "summary": "batch update",
                 "parameters": [
@@ -4183,7 +4189,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_menu"
+                    "用户菜单关联视图"
                 ],
                 "summary": "GroupBy",
                 "parameters": [
@@ -4240,7 +4246,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_menu"
+                    "用户菜单关联视图"
                 ],
                 "summary": "page query",
                 "parameters": [
@@ -4298,6 +4304,12 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "zh_name",
+                        "name": "zh_name",
                         "in": "query"
                     },
                     {
@@ -4429,7 +4441,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_menu"
+                    "用户菜单关联视图"
                 ],
                 "summary": "delete",
                 "parameters": [
@@ -4476,7 +4488,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_role"
+                    "用户角色关联视图"
                 ],
                 "summary": "query objects",
                 "parameters": [
@@ -4526,6 +4538,12 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "zh_name",
+                        "name": "zh_name",
                         "in": "query"
                     },
                     {
@@ -4646,7 +4664,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_role"
+                    "用户角色关联视图"
                 ],
                 "summary": "save",
                 "parameters": [
@@ -4698,7 +4716,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_role"
+                    "用户角色关联视图"
                 ],
                 "summary": "batch delete",
                 "parameters": [
@@ -4741,7 +4759,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_role"
+                    "用户角色关联视图"
                 ],
                 "summary": "batch update",
                 "parameters": [
@@ -4782,7 +4800,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_role"
+                    "用户角色关联视图"
                 ],
                 "summary": "GroupBy",
                 "parameters": [
@@ -4839,7 +4857,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_role"
+                    "用户角色关联视图"
                 ],
                 "summary": "page query",
                 "parameters": [
@@ -4897,6 +4915,12 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "zh_name",
+                        "name": "zh_name",
                         "in": "query"
                     },
                     {
@@ -5028,7 +5052,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User_with_role"
+                    "用户角色关联视图"
                 ],
                 "summary": "delete",
                 "parameters": [
@@ -6669,6 +6693,10 @@
                 "work_number": {
                     "description": "work_number",
                     "type": "string"
+                },
+                "zh_name": {
+                    "description": "zh_name",
+                    "type": "string"
                 }
             }
         },
@@ -6748,6 +6776,10 @@
                 },
                 "work_number": {
                     "description": "work_number",
+                    "type": "string"
+                },
+                "zh_name": {
+                    "description": "zh_name",
                     "type": "string"
                 }
             }
